objects/DataConfiguration__c.object
<CustomObject>
    <fields>
        <fullName>Endpoint_URL__c</fullName>
        <label>Endpoint URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Environment_Name__c</fullName>
        <label>Environment Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <label>UserName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DataConfiguration</label>
    <nameField>
        <label>DataConfiguration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DataConfiguration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>